--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guessnumber</title>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300&family=Ubuntu:wght@300;400;500&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="index.js">
+    <script src="index.js" defer></script>
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300&family=Ubuntu:wght@300;400;500&display=swap" rel="stylesheet">   
 </head>
 <body>
     <header>
@@ -20,11 +18,10 @@
     
     <main class="container">
         <form id="form">
-            <label for="kick">Digite um número (0 - 10)</label>
+            <label for="kick">Digite um número (0 - 10):</label>
             <input type="number" id="kick" max="10" placeholder="0">
 
-            <button type="submit">Jogar!</button>
-            
+            <button type="submit">Jogar!</button>            
         </form>
 
         <section class="result-box" id="result">
@@ -32,7 +29,7 @@
             <span id="attempt">Tentativas: 0</span>
         </section>
 
-        <button id="btnRestart">Jogar de novo!</button>
+        <button id="btnRestart" onclick="restart()">Jogar de novo!</button>
     </main>
 
     <footer>
