--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300&family=Ubuntu:wght@300;400;500&display=swap" rel="stylesheet">   
+    <script src="https://kit.fontawesome.com/252ab4a34a.js" crossorigin="anonymous" defer></script>
 </head>
 <body>
     <header>
         <a href="#"><h1>GuessNumber</h1></a>
+        <i class="fa-solid fa-question"></i></a>
     </header>
     
     <main class="container">
